--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "tiny-slider": "^2.9.3"
+  },
   "description": ""
 }
